--- a/static/less/custom-other.less
+++ b/static/less/custom-other.less
@@ -1,153 +1,175 @@
 ﻿// Hopefully any settings that need to change will be here
 
+/* 
+
+    //Small devices (tablets, 768px and up)
+    @media (min-width: @screen-sm-min) {
+      // ... code ...
+    }
+    
+    // Medium devices (desktops, 992px and up) 
+    @media (min-width: @screen-md-min) { 
+      // ... code ...
+    }
+
+    // Large devices (large desktops, 1200px and up) 
+    @media (min-width: @screen-lg-min) { 
+      // ... code ...
+    }
+
+*/
 
 
 // test colors
-.color-tests {display:inline-block;}
-.test-shape { height: 50px; width:12%; margin: 10px; }
+  .color-samples {display: none;}
+  .color-tests {display:inline-block;}
+  .test-shape { height: 50px; width:12%; margin: 10px; }
 
-.color-tests { .test-shape }
-     .color-Nav { background: @rouge }
-     .color-A { background: @cuivre }
-     .color-B { background: @gris }
-     .color-C { background: @bleu }
-     .color-D { background: @bleu-logo }
-     .color-E { background: @vert }
-     .color-F { background: @marron }
-
-
-// Custom background and styling
-// -----------------------------------------------------
-
-//  mixin gradient for html background
-.website-bg-gradient  (@start-color: lighten(@bg-grad-top, 10%); 
-                      @mid-color1: @bg-grad-top; @color-stop1: 15%;
-                      @end-color: @bg-grad-bottom) {
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@start-color), color-stop(@color-stop1, @mid-color1), to(@end-color));
-  background-image: -webkit-linear-gradient(@start-color, @mid-color1 @color-stop1, @end-color);
-  background-image: -moz-linear-gradient(top, @start-color, @mid-color1 @color-stop1, @end-color);
-  background-image: linear-gradient(@start-color, @mid-color1 @color-stop1, @end-color);
-  background-repeat: no-repeat;
-  filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",argb(@start-color),argb(@end-color))); // IE9 and down, gets no color-stop at all for proper fallback
-}
-
-// mixin shadow inset at top of window
-.website-top-shadow (@string: 0 0 25px rgba(0, 0, 0, 0.25)) {
-  -webkit-box-shadow: @string;
-  -moz-box-shadow:    @string;
-  box-shadow:         @string;
-}
-
-html {
-    margin: 0;
-    background-repeat: no-repeat;
-    
-    // background gradient mixin
-    .website-bg-gradient;
-}
-
-body:before {
-  content: "";
-  position: fixed;
-  top: -10px;
-  left: 0;
-  width: 100%;
-  height: 10px;
-  z-index: 100;
-
-  //  shadow inset at top of window
-  .website-top-shadow;
-}
+  .color-tests { .test-shape }
+       .color-Nav { background: @rouge }
+       .color-A { background: @cuivre }
+       .color-B { background: @gris }
+       .color-C { background: @bleu }
+       .color-D { background: @bleu-logo }
+       .color-E { background: @vert }
+       .color-F { background: @marron }
 
 
-header.logo-container {
+// =========== Custom background =====================
 
-  /* Small devices (tablets, 768px and up) */
-  @media (min-width: @screen-sm-min) {
-    margin-bottom: 86px;
-  }
-  
-  /* Medium devices (desktops, 992px and up) */
-  @media (min-width: @screen-md-min) { 
-    margin-bottom: 112px;
+  //  mixin gradient for html background
+    .website-bg-gradient  (@start-color: lighten(@bg-grad-top, 10%); 
+                          @mid-color1: @bg-grad-top; @color-stop1: 15%;
+                          @end-color: @bg-grad-bottom) {
+      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@start-color), color-stop(@color-stop1, @mid-color1), to(@end-color));
+      background-image: -webkit-linear-gradient(@start-color, @mid-color1 @color-stop1, @end-color);
+      background-image: -moz-linear-gradient(top, @start-color, @mid-color1 @color-stop1, @end-color);
+      background-image: linear-gradient(@start-color, @mid-color1 @color-stop1, @end-color);
+      background-repeat: no-repeat;
+      filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",argb(@start-color),argb(@end-color))); // IE9 and down, gets no color-stop at all for proper fallback
+    }
+
+  // mixin shadow inset at top of window
+    .website-top-shadow (@string: 0 0 25px rgba(0, 0, 0, 0.25)) {
+      -webkit-box-shadow: @string;
+      -moz-box-shadow:    @string;
+      box-shadow:         @string;
+    }
+
+  html {
+      margin: 0;
+      background-repeat: no-repeat;
+      
+      // background gradient mixin
+      .website-bg-gradient;
+
   }
 
-  /* Large devices (large desktops, 1200px and up) */
-  @media (min-width: @screen-lg-min) { 
-    margin-bottom: 135px;
-  }
+  body {
+    // bg image in "body" position to the left
+    background: url(../img/Licorne-tete.png) no-repeat -5% 90%;
+      
+    // bg image in "div.bg-deco-right" position to the right 
+    .bg-deco-right {
+      background: url(../img/Licorne-queue.png) no-repeat 103% 70%;
+    }
 
-  img.logo-small {
-    max-width: 50%;
-    min-width: 250px;
-    margin: auto;
-    margin-bottom: -5%;
+    // shadow at top of window
+    &:before {
+    content: "";
+    position: fixed;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    z-index: 100;
+    //  mixin for shadow inset at top of window
+    .website-top-shadow;
   }
+}
 
-  img.clouds, img.logo-big {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    z-index: -1;
+
+  header.logo-container {
 
     /* Small devices (tablets, 768px and up) */
     @media (min-width: @screen-sm-min) {
-      margin-left: -490px;
-      width: 979px;
+      margin-bottom: 86px;
     }
     
     /* Medium devices (desktops, 992px and up) */
     @media (min-width: @screen-md-min) { 
-      margin-left: -646px;
-      width: 1292px;
+      margin-bottom: 112px;
     }
 
     /* Large devices (large desktops, 1200px and up) */
     @media (min-width: @screen-lg-min) { 
-      margin-left: -788px;
-      width: 1577px;
+      margin-bottom: 135px;
     }
-  }
-}
 
+    img.logo-small {
+      max-width: 50%;
+      min-width: 250px;
+      margin: auto;
+      margin-bottom: -5%;
+    }
 
+    img.clouds, img.logo-big {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      z-index: -1;
 
-
-// ================ Typography ================
-  // Add style for overlock display font (eg. italic)
-  // go to custom-variables.less line 87
-  h1, h2, h3, h4, h5, h6,
-  .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-style: @headings-font-style;
-  }
-  .category {
-    font-family: @font-family-display;
-    font-style: italic;
-    color: @gray-light;
-    font-size: 1.25em;
-    letter-spacing: .15em;
-    text-shadow:  0px 1px 0px tint(@gris, 90%), 
-                  0px -1px 0px shade(@gris, 50%);
-  }
-  // ========== Links ==============
-    a {
-      // color: @link-color;
-      // text-decoration: none;
-
-      &:hover,
-      &:focus {
-        // color: @link-hover-color;
-        text-decoration: none;
+      /* Small devices (tablets, 768px and up) */
+      @media (min-width: @screen-sm-min) {
+        margin-left: -490px;
+        width: 979px;
+      }
+      
+      /* Medium devices (desktops, 992px and up) */
+      @media (min-width: @screen-md-min) { 
+        margin-left: -646px;
+        width: 1292px;
       }
 
-      &:focus {
-        .tab-focus();
+      /* Large devices (large desktops, 1200px and up) */
+      @media (min-width: @screen-lg-min) { 
+        margin-left: -788px;
+        width: 1577px;
       }
     }
-  // ----------- /end Links -----------
-// ------------- /end Typography ---------------
+  }
+
+// ----------- /end Custom background ------------------
+
+  // ================ Typography base ================
+    // Add style for overlock display font (eg. italic)
+    // go to custom-variables.less line 87
+    h1, h2, h3, h4, h5, h6,
+    .h1, .h2, .h3, .h4, .h5, .h6 {
+      font-style: @headings-font-style;
+    }
+    // ========== Links ==============
+      a {
+        // color: @link-color;
+        // text-decoration: none;
+
+        &:hover,
+        &:focus {
+          // color: @link-hover-color;
+          text-decoration: none;
+        }
+
+        &:focus {
+          .tab-focus();
+        }
+      }
+    // ----------- /end Links -----------
+  // ------------- /end Typography ---------------
 
 // ============= wrapper ============
+  .wrapper { 
+    // display: none;
+  }
   .bg-content {
     background-color: fade(@ciel, 50%);
   }
@@ -393,37 +415,59 @@ header.logo-container {
 // ================= showcase ===================== 
 
   //mixins for showcase
-  @radius: 16px;
-  .showcase-radius {
-    border-bottom-right-radius: @radius;
-       border-top-right-radius: @radius;
-  }
-  @showing-shadow-color: tint(@gris, 30%);
-  .showing-box-shadow(@x: 7px, @y: 0, @blur: 0, @spread: -5px) {
-    -webkit-box-shadow: @x @y @blur @spread @showing-shadow-color; // iOS <4.3 & Android <4.1
-            box-shadow: @x @y @blur @spread @showing-shadow-color;
-  }
-  @show-image-shadow-color: shade(@gris, 30%);
-  // .show-image-shadow {
-  //   -webkit-box-shadow: 0 1px 0 0 @show-image-shadow-color, 
-  //                       0 -1px 0 0 @show-image-highlight-color; // iOS <4.3 & Android <4.1
-  //           box-shadow: 0 1px 0 0 @show-image-shadow-color,
-  //                       0 -1px 0 0 @show-image-highlight-color;
-  // }
-  @show-image-highlight-color: tint(@gris, 70%);
-  // .show-image-highlight(@x1: -1px, @x2: 5px, @y1: -1px, @y2: 5px, @blur: 5px, @spread: 0px) {
-  //   -webkit-box-shadow: @x1 @y1 @blur @spread @show-image-shadow-color,
-  //                       @x2 @y2 @blur @spread @show-image-highlight-color; // iOS <4.3 & Android <4.1
-  //           box-shadow: @x1 @y1 @blur @spread @show-image-shadow-color,
-  //                       @x2 @y2 @blur @spread @show-image-highlight-color;
-  // }
+    @radius: 16px;
+    .showcase-radius {
+      border-bottom-right-radius: @radius;
+         border-top-right-radius: @radius;
+    }
+    @showing-shadow-color: tint(@gris, 30%);
+    .showing-box-shadow(@x: 7px, @y: 0, @blur: 0, @spread: -5px) {
+      -webkit-box-shadow: @x @y @blur @spread @showing-shadow-color; // iOS <4.3 & Android <4.1
+              box-shadow: @x @y @blur @spread @showing-shadow-color;
+    }
+    @show-image-shadow-color: shade(@gris, 30%);
+    // .show-image-shadow {
+    //   -webkit-box-shadow: 0 1px 0 0 @show-image-shadow-color, 
+    //                       0 -1px 0 0 @show-image-highlight-color; // iOS <4.3 & Android <4.1
+    //           box-shadow: 0 1px 0 0 @show-image-shadow-color,
+    //                       0 -1px 0 0 @show-image-highlight-color;
+    // }
+    @show-image-highlight-color: tint(@gris, 70%);
+    // .show-image-highlight(@x1: -1px, @x2: 5px, @y1: -1px, @y2: 5px, @blur: 5px, @spread: 0px) {
+    //   -webkit-box-shadow: @x1 @y1 @blur @spread @show-image-shadow-color,
+    //                       @x2 @y2 @blur @spread @show-image-highlight-color; // iOS <4.3 & Android <4.1
+    //           box-shadow: @x1 @y1 @blur @spread @show-image-shadow-color,
+    //                       @x2 @y2 @blur @spread @show-image-highlight-color;
+    // }
 
 
-  .showcase {
+  #showcase {
     margin-bottom: 20px;
-    background-color: @ciel;
-    // padding-left: 0;
 
+    header {
+      background-color: fadeout(@bleu-logo, 70%);
+      border-top-left-radius: 1em;
+      border-top-right-radius: 1em;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      text-align: center;
+      h1 {
+        font-family: @font-family-display;
+        font-style: italic;
+        font-size: 1.25em;
+        display: inline-block;
+        margin: 0;
+        padding-right: 1em;
+        color: @bleu-logo;
+        text-shadow: 0 1px 1px @ciel;
+      }
+      p {
+        color: @bleu-logo;
+        text-shadow: 0 1px 1px @ciel;
+        margin: 0;
+        display: inline-block;
+      }
+    }
     .showcase-image {
       padding: 0;
 
@@ -437,35 +481,42 @@ header.logo-container {
 
     .showcase-texts {
       padding-left: 0;
-      padding-right: 0;
+      padding-right: 2px;
 
-      .showing {
-        background-color: tint(@ciel, 30%);
-        .showing-box-shadow;
-      }
-      .not-showing {
-        opacity: .5;
-        &:hover {
-          opacity: 1;
+        .showing {
+          background-color: tint(@ciel, 30%);
+          .showing-box-shadow;
+        }
+        .not-showing {
+          opacity: .5;
+          &:hover {
+            opacity: 1;
         }
         
-
       }
 
       .showcase-article {
-        .showcase-radius;
+        .showcase-radius; // rounded edge mixin
         border: 1px solid shade(@ciel, 10%);
         padding: 10px;
         padding-left: 20px; //gutter width
 
         .category {
-        margin-top: 0;
-        margin-bottom: 0;
+          font-family: @font-family-display;
+          font-style: italic;
+          color: @gray-light;
+          font-size: 1.25em;
+          letter-spacing: .15em;
+          text-shadow:  0px 1px 0px tint(@gris, 90%), 
+                        0px -1px 0px shade(@gris, 50%);
+          margin-top: 0;
+          margin-bottom: 0;
         }
         h2 {
-        font-size: 1.5em;
-        margin-top: 0;
-        margin-bottom: 0;
+          color: @bleu;
+          font-size: 1.5em;
+          margin-top: 0;
+          margin-bottom: 0;
         }
         p {
 
@@ -473,40 +524,165 @@ header.logo-container {
       }
     }
   }
-// -------------- /end showcase ---------------- 
+// -------------- /end showcase --------------------
 
+// resize images to fit column width
+// temporary styling WIP
 
+  #maps, #forum {
+      h1 {
+      border-top-left-radius: 7px;
+         border-top-right-radius: 7px;
 
-// nav-tabs "Internationales  + Nationales"
-// ------------------------------------------------------
-.nav-tabs {
-  background-color: shade(@nav-tabs-link-color, 10%);
-  a {
-    color: shade(@nav-tabs-link-color, 40%);
-    font-weight: bold;
-    &:hover {
-      color: shade(@nav-tabs-link-color,)
+        background-color: tint(@bleu-logo, 30%);
+        font-family: @font-family-display;
+        font-style: italic;
+        font-size: 1em;
+        color: @ciel;
+        text-align: center;
+        padding: 5px;
+      }
+      h3 {
+        font-size: 1.25em;
+      }
+    img {
+      width: 100%;
+      max-width: 40%;
+      float: left;
+      padding-right: 10px;
+
+      //Small devices (tablets, 768px and up)
+      @media (min-width: @screen-sm-min) {
+        max-width: 100%;
+        display: block;
+        clear: both;
+      }
+
+      // Medium devices (desktops, 992px and up) 
+      @media (min-width: @screen-md-min) { 
+
+      }
+
+      // Large devices (large desktops, 1200px and up) 
+      @media (min-width: @screen-lg-min) { 
+      }
+
     }
   }
-}
-.news {
-  position: relative;
-  z-index: 0;
-  border-top: none;
-  background-color: shade(@nav-tabs-link-color, 0%);
-  padding: 10px;
-}
 
-.footer-container {
-  margin-top: 20px;
-  height: 200px;
-  padding-top: 30px;
-  border: 1px solid shade(@bleu, 20%);
-  background-color: desaturate(@bleu, 10%);
-  color: tint(@bleu, 40%);
-  border-radius: 5px;
-}
+  #forum {
+    img {
+      width: 55px;
+      float: left;
+      padding-right: 10px;
+    }
+  }
 
+// ================= news ============================
+  // resize images to fit column width
+    #news {
+      img {
+        width: 100%;
+        max-width: 40%;
+        float: left;
+        padding-right: 10px;
+
+        //Small devices (tablets, 768px and up)
+        @media (min-width: @screen-sm-min) {
+          max-width: 100%;
+          display: block;
+          clear: both;
+        }
+
+        // Medium devices (desktops, 992px and up) 
+        @media (min-width: @screen-md-min) { 
+
+        }
+
+        // Large devices (large desktops, 1200px and up) 
+        @media (min-width: @screen-lg-min) { 
+        }
+
+      }
+    }
+  .nav-tabs {
+    background-color: shade(@nav-tabs-link-color, 10%);
+    a {
+      color: shade(@nav-tabs-link-color, 40%);
+      font-weight: bold;
+      &:hover {
+        color: shade(@nav-tabs-link-color,)
+      }
+    }
+  }
+  .news {
+    position: relative;
+    z-index: 0;
+    border-top: none;
+    background-color: shade(@nav-tabs-link-color, 0%);
+    padding: 10px;
+  }
+// -------------- /end news --------------------------
+
+// ================= agenda ============================
+    //mixins for agenda
+    .agenda-label {
+      border-top-left-radius: 7px;
+         border-top-right-radius: 7px;
+    }
+    #agenda {
+      h1 {
+        .agenda-label;
+        background-color: @nav-color;
+        font-family: @font-family-display;
+        font-style: italic;
+        font-size: 1em;
+        color: @ciel;
+        text-align: center;
+        padding: 5px;
+      }
+      h3 {
+        font-size: 1.25em;
+      }
+      // resize images to fit column width
+      img {
+        width: 50%;
+        max-width: 40%;
+        float: left;
+        padding-right: 10px;
+
+        //Small devices (tablets, 768px and up)
+        @media (min-width: @screen-sm-min) {
+          max-width: 100%;
+          display: block;
+          clear: both;
+        }
+
+        // Medium devices (desktops, 992px and up) 
+        @media (min-width: @screen-md-min) { 
+
+        }
+
+        // Large devices (large desktops, 1200px and up) 
+        @media (min-width: @screen-lg-min) { 
+        }
+
+      }
+    }
+// --------------- /end agenda --------------------------
+
+// ================= footer ============================
+  .footer-container {
+    margin-top: 20px;
+    height: 200px;
+    padding-top: 30px;
+    border: 1px solid shade(@bleu, 20%);
+    background-color: desaturate(@bleu, 10%);
+    color: tint(@bleu, 40%);
+    border-radius: 5px;
+  }
+
+// --------------- /end footer -------------------------
 
 
 
